--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-native": "0.71.8",
     "react-native-dotenv": "^3.4.8",
     "react-native-gesture-handler": "~2.9.0",
+    "react-native-paper": "^5.8.0",
     "react-native-tab-view": "^3.5.1",
     "typescript": "^4.9.4"
   },
